# stonx

./: .gitignore  Cargo.toml  README.md
src/: bot.rs  main.rs  trading_config.rs
