[package]
name = "stonx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yahoo_finance_api = "1.2.2"
chrono = "0.4.19"
tokio-test = "0.4.2"
csv = "1.1"
plotters = "0.3"
fast-float = "0.2"
log = "0.4.17"
time = "0.3.11"
tokio = {version = "1.19.2", features = ["full"]}
async-trait = "0.1.56"